--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <section>
         <article>
           <h2>Merriweather and Merriweather Sans</h2>
-          <p>Designed for the screen, the text face is made pleasant to read with very large x heights and slightly condensed letterforms. Serifs and open forms are sturdy with a mild diagonal stress.</p>
-          <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+          <p>Designed for the screen, the text face is made pleasant to read with a very large x height and slightly condensed letterforms. The type was designed by Sorkin Type to save space, suitable for editorial design like news. Even in small scale, the type remains sturdy and legible.</p>
+          <p>Its sans sibling, Merriweather Sans, shares features like a large x height. Letterforms are semi condensed and low contrast. This type is arguably stronger at a smaller size and still very pleasant to read. The type is constantly evolving and updated as it has become adopted for screens through modern shapes and forms. There are currently 8 styles available. 
+          </p>
           <a href="">Download Roboto</a>
           <a href="">Download Cabin Regular</a>
         </article>
@@ -31,7 +32,7 @@
       <section>
         <article>
           <h2>Roboto Slab and Roboto Mono</h2>
-          <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+          <p>Large geometric forms and a supporting frame give Roboto a dual nature. Geometric forms can create grotesque distortions in letterforms that force rigid rhythm but its mechanical skeleton keeps the letters structured and allow them to settle into their natural widths. Robot Slab has friendly and open curves with a rhythm that is more humanist than a traditional serif.</p>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
           <a href="">Download Roboto</a>
           <a href="">Download Cabin Regular</a>
