--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Nunito+Sans:ital,wght@0,200;0,400;0,800;1,200&family=Nunito:ital,wght@0,200;0,400;0,800;1,200&family=Roboto+Slab:wght@100;400;900&family=Roboto:ital,wght@0,100;0,400;0,900;1,100&display=swap" rel="stylesheet">
     <title>Fontastic Families</title>
   </head>
 
@@ -23,8 +26,9 @@
     </header>
 
     <main>
-      <section>
-        <article>
+      <section class="first-section-background with-background" id="pair1">
+        <article class="first-article-container">
+          <h4><span class="font-pair1a">Merriweather</span> + <span class="font-pair1b">Merriweather+Sans</span></h4>
           <h3>Merriweather and Merriweather Sans</h3>
           <p>Designed for the screen, the text face is made pleasant to read with a very large x height and slightly condensed letterforms. The type was designed by Sorkin Type to save space, suitable for editorial design like news. Even in small scale, the type remains sturdy and legible.</p>
           <p>Its sans sibling, Merriweather Sans, shares features like a large x height. Letterforms are semi condensed and low contrast. This type is arguably stronger at a smaller size and still very pleasant to read. The type is constantly evolving and updated as it has become adopted for screens through modern shapes and forms. There are currently 8 styles available. 
@@ -34,8 +38,9 @@
         </article>
       </section>
 
-      <section>
-        <article>
+      <section class="second-section-background with-background" id="pair2">
+        <article class="second-article-container">
+          <h4><span class="font-pair1a">Roboto+Slab</span> + <span class="font-pair1b">Sobot+Mono</span></h4>
           <h3>Roboto Slab and Roboto Mono</h3>
           <p>Large geometric forms and a supporting frame give Roboto a dual nature. Geometric forms can create grotesque distortions in letterforms that force rigid rhythm but its mechanical skeleton keeps the letters structured and allow them to settle into their natural widths. Robot Slab has friendly and open curves with a rhythm that is more humanist than a traditional serif.</p>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
@@ -44,8 +49,9 @@
         </article>
       </section>
 
-      <section>
-        <article>
+      <section class="third-section-background with-background" id="pair3">
+        <article class="third-article-container">
+          <h4><span class="font-pair1a">Nunito</span> + <span class="font-pair1b">Nunito+Sans</span></h4>
           <h3>Nunito and Nunito Sans</h3>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
