--- a/index.html
+++ b/index.html
@@ -11,52 +11,49 @@
   <body>
     <header class="hero hero-background">
       <section class="hero-content">
-    <h1>Type and Form</h1>
-    <h2>by Chan Kim</h2>
-    <p class="hero-content">Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
-    </section>
-
-  <section>
-    <nav>
+        <h1>Type and Form</h1>
+        <h2>by Chan Kim</h2>
+        <p class="hero-content">Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
+        <nav>
       <a href="#pair1">Merriweather (Sans)</a>
       <a href="#pair2">Roboto (Slab/Mono)</a>
       <a href="#pair3">Nunito (Sans)</a>
-    </nav>
-  </section>
+        </nav>
+      </section>
     </header>
 
     <main>
       <section class="first-section-background with-background" id="pair1">
         <article class="first-article-container">
-          <h4><span class="font-pair1a">Merriweather</span> + <span class="font-pair1b">Merriweather+Sans</span></h4>
+          <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4>
           <h3>Merriweather and Merriweather Sans</h3>
           <p>Designed for the screen, the text face is made pleasant to read with a very large x height and slightly condensed letterforms. The type was designed by Sorkin Type to save space, suitable for editorial design like news. Even in small scale, the type remains sturdy and legible.</p>
           <p>Its sans sibling, Merriweather Sans, shares features like a large x height. Letterforms are semi condensed and low contrast. This type is arguably stronger at a smaller size and still very pleasant to read. The type is constantly evolving and updated as it has become adopted for screens through modern shapes and forms. There are currently 8 styles available. 
           </p>
-          <a href="">Download Roboto</a>
-          <a href="">Download Cabin Regular</a>
+          <a href="">Download Merriweather</a>
+          <a href="">Download Merriweather Sans</a>
         </article>
       </section>
 
       <section class="second-section-background with-background" id="pair2">
         <article class="second-article-container">
-          <h4><span class="font-pair1a">Roboto+Slab</span> + <span class="font-pair1b">Sobot+Mono</span></h4>
+          <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4>
           <h3>Roboto Slab and Roboto Mono</h3>
           <p>Large geometric forms and a supporting frame give Roboto a dual nature. Geometric forms can create grotesque distortions in letterforms that force rigid rhythm but its mechanical skeleton keeps the letters structured and allow them to settle into their natural widths. Robot Slab has friendly and open curves with a rhythm that is more humanist than a traditional serif.</p>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
-          <a href="">Download Roboto</a>
-          <a href="">Download Cabin Regular</a>
+          <a href="">Download Roboto Slab</a>
+          <a href="">Download Roboto Mono</a>
         </article>
       </section>
 
       <section class="third-section-background with-background" id="pair3">
         <article class="third-article-container">
-          <h4><span class="font-pair1a">Nunito</span> + <span class="font-pair1b">Nunito+Sans</span></h4>
+          <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4>
           <h3>Nunito and Nunito Sans</h3>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
           <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
-          <a href="">Download Roboto</a>
-          <a href="">Download Cabin Regular</a>
+          <a href="">Download Nunito</a>
+          <a href="">Download Nunito Sans</a>
         </article>
       </section>
     </main>
