reformat and cleaning up

--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Nunito+Sans:ital,wght@0,200;0,400;0,800;1,200&family=Nunito:ital,wght@0,200;0,400;0,800;1,200&family=Roboto+Slab:wght@100;400;900&family=Roboto:ital,wght@0,100;0,400;0,900;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Nunito+Sans:ital,wght@0,200;0,400;0,800;1,200&family=Nunito:ital,wght@0,200;0,400;0,800;1,200&family=Roboto+Slab:wght@100;400;900&family=Roboto:ital,wght@0,100;0,400;0,900;1,100&DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Fontastic Families</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header class="hero hero-background">
-      <section class="hero-content">
-        <h1>Type and Form by Chan Kim</h1>
-        <h2>"TREAT TYPE LIKE PAINT"</h2>
-        <p>Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
         <nav>
       <a href="#pair1">Merriweather (Sans)</a>
       <a href="#pair2">Roboto (Slab/Mono)</a>
       <a href="#pair3">Nunito (Sans)</a>
         </nav>
+        <div class="hidden">
+      <section class="hero-content">
+        <h1>Family Friendly Fonts</h1>
+        <h2>by Chan Kim</h2>
+        <p>Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
       </section>
+        </div>
     </header>
 
     <main>
       <section class="first-section-background with-background" id="pair1">
         <article class="first-article-container">
-          <!-- <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4> -->
-          <h3>Merriweather and <br> Merriweather Sans</h3>
+          <h4><span style="font-family:'Merriweather">Merriweather</span> + <span style="font-family:'Merriweather Sans">Merriweather Sans</span></h4>
           <p>Designed for the screen, the text face is made pleasant to read with a very large x height and slightly condensed letterforms. The type was designed by Sorkin Type to save space, suitable for editorial design like news. Even in small scale, the type remains sturdy and legible.</p>
           <p>Its sans sibling, Merriweather Sans, shares features like a large x height. Letterforms are semi condensed and low contrast. This type is arguably stronger at a smaller size and still very pleasant to read. The type is constantly evolving and updated as it has become adopted for screens through modern shapes and forms. There are currently 8 styles available. 
           </p>
@@ -37,10 +39,9 @@
 
       <section class="second-section-background with-background" id="pair2">
         <article class="second-article-container">
-          <!-- <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4> -->
-          <h3>Roboto Slab and <br> Roboto Mono</h3>
+          <h4><span style="font-family:'Roboto Slab">Roboto Slab</span> + <span style="font-family:'Roboto Mono">Roboto Mono</span></h4>
           <p>Large geometric forms and a supporting frame give Roboto a dual nature. Geometric forms can create grotesque distortions in letterforms that force rigid rhythm but its mechanical skeleton keeps the letters structured and allow them to settle into their natural widths. Robot Slab has friendly and open curves with a rhythm that is more humanist than a traditional serif.</p>
-          <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+          <p>oboto Mono is a monospaced addition to the Roboto type family. Like the other members of the Roboto family, the fonts are optimized for readability on screens across a wide variety of devices and reading environments. While the monospaced version is related to its variable width cousin, it doesn’t hesitate to change forms to better fit the constraints of a monospaced environment. For example, narrow glyphs like ‘I’, ‘l’ and ‘i’ have added serifs for more even texture while wider glyphs are adjusted for weight. Curved caps like ‘C’ and ‘O’ take on the straighter sides from Roboto Condensed.</p>
           <a href="https://fonts.google.com/specimen/Roboto+Slab#standard-styles" target="_blank">Download Roboto Slab</a>
           <a href="https://fonts.google.com/specimen/Roboto#standard-styles" target="_blank">Download Roboto Mono</a>
         </article>
@@ -48,18 +49,16 @@
 
       <section class="third-section-background with-background" id="pair3">
         <article class="third-article-container">
-          <!-- <h4><span class="font-pair1a">font-pair1a</span> + <span class="font-pair1b">font-pair1b</span></h4> -->
-          <h3>Nunito and <br> Nunito Sans</h3>
-          <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
-          <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+          <h4><span style="font-family:'Nunito">Nunito</span> + <span style="font-family:'Nunito Sans">Nunito Sans</span></h4>
+          <p>Nunito is a well balanced, highly-readable sans-serif typeface. The characters have thin, unifrom stroke widths that work well for both body and display copy. The project began as a rounded terminal sans-serif for display typography, before being extended to a terminal version. Nunito was created by Vernon Adams, a typographer whose passion was designing free, open-source fonts for community use. From 2007 to 2014, Vernon designed 51 fonts, including some of the most popular fonts on the web.</p>
+          <p>Mature, modern, approachable, honest and confident. These are the traits portrayed through Nunito Sans. The legible sans serif  is open and easy to read. The font is versatile and balanced, with friendly, open character spacing. It is ideal for brands focused on improving life at home, like Kitchen Aid. In this version the corners are terminated then polished.</p>
           <a href="https://fonts.google.com/specimen/Nunito" target="_blank">Download Nunito</a>
-          <a href="https://fonts.google.com/specimen/Nunito" target="_blank">Download Nunito Sans</a>
+          <a href="https://fonts.google.com/specimen/Nunito+Sans" target="_blank">Download Nunito Sans</a>
         </article>
       </section>
     </main>
     <footer>
-      <h5><a href="https://thisischankim.com" target="_blank">&copy;reator</a></h5>
-      <h5><a href="https://fonts.google.com/knowledge/choosing_type/pairing_typefaces_within_a_family_superfamily" target="_blank">&copy;itation</a></h5>
+      <h5><a href="https://thisischankim.com" target="_blank">&copy;reator</a></h5>+  <h5><a href="https://fonts.google.com/knowledge/choosing_type/pairing_typefaces_within_a_family_superfamily" target="_blank">&copy;itation</a></h5>
     </footer>
   </body>
 </hmtl>
