added to jquery

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <hmtl>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Nunito+Sans:ital,wght@0,200;0,400;0,800;1,200&family=Nunito:ital,wght@0,200;0,400;0,800;1,200&family=Roboto+Slab:wght@100;400;900&family=Roboto:ital,wght@0,100;0,400;0,900;1,100&DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet">
@@ -10,12 +10,13 @@
   </head>
 
   <body>
-    <header class="hero hero-background">
+    <header class="hero">
         <nav>
       <a href="#pair1">Merriweather (Sans)</a>
       <a href="#pair2">Roboto (Slab/Mono)</a>
       <a href="#pair3">Nunito (Sans)</a>
         </nav>
+        <header class="hero-background hero">
         <div class="hidden">
       <section class="hero-content">
         <h1>Family Friendly Fonts</h1>
@@ -23,6 +24,7 @@
         <p>Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
       </section>
         </div>
+         </header>
     </header>
 
     <main>
