bottom jquery script

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </article>
       </section>
     </main>
+    <script src="script/scripts.js"></script>
     <footer>
       <h5><a href="https://thisischankim.com" target="_blank">&copy;reator</a></h5>+  <h5><a href="https://fonts.google.com/knowledge/choosing_type/pairing_typefaces_within_a_family_superfamily" target="_blank">&copy;itation</a></h5>
     </footer>
