--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Nunito+Sans:ital,wght@0,200;0,400;0,800;1,200&family=Nunito:ital,wght@0,200;0,400;0,800;1,200&family=Roboto+Slab:wght@100;400;900&family=Roboto:ital,wght@0,100;0,400;0,900;1,100&DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Fontastic Families</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="scripts/scripts.js"></script>
   </head>
 
   <body>
