--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
       <a href="#pair2">Roboto (Slab/Mono)</a>
       <a href="#pair3">Nunito (Sans)</a>
         </nav>
-        <header class="hero-background hero">
-        <div class="hidden">
-      <section class="hero-content">
+        <div class="hero-content hidden">
+          <header class="hero-background hero"> </header>
+      <section class="hero-content-inner">
+        <div class="hidden hero-position">
         <h1>Family Friendly Fonts</h1>
         <h2>by Chan Kim</h2>
         <p>Together, two fonts can create a pairing that compliment each other while holding thier own weight. It can be tempting to create wild combinations and explore varieties but traditional methods work well. A san serif and serif, from the same family, can be all we need when creating a font pairing.</p>
+        </div>
       </section>
         </div>
-         </header>
     </header>
 
     <main>
